--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "gulp-static-hash",
-	"version": "0.1.4",
+	"name": "stitch-gulp-static-hash",
+	"version": "0.1.5",
 	"description": "A gulp plugin for cache files by adding a hash version append their name(like a.js?v=hash) or create a hash named file",
 	"license": "MIT",
 	"keywords": [
@@ -10,13 +10,13 @@
 		"gulpplugin"
 	],
 	"author": {
-		"name": "anhulife",
-		"email": "anhulife@gmail.com"
+		"name": "stitch media",
+		"email": "contact@stitchmedia.ca
 	},
-	"homepage": "https://github.com/anhulife/gulp-static-hash",
+	"homepage": "https://github.com/stitchmedia/gulp-static-hash",
 	"repository": {
 		"type": "git",
-		"url": "git@github.com:anhulife/gulp-static-hash.git"
+		"url": "git@github.com:stitchmedia/gulp-static-hash.git"
 	},
 	"scripts": {
 		"test": "mocha tests"
