--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	],
 	"author": {
 		"name": "stitch media",
-		"email": "contact@stitchmedia.ca
+		"email": "contact@stitchmedia.ca"
 	},
 	"homepage": "https://github.com/stitchmedia/gulp-static-hash",
 	"repository": {
