--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ indent_size = 2
 
 # We recommend you to keep these unchanged
 end_of_line = lf
-insert_final_newline = true
+insert_final_newline = false
 charset = utf-8
 trim_trailing_whitespace = true
 max_line_length = 140
