--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gulpplugin"
   ],
   "scripts": {
-    "test": "mocha tests",
+    "test": "mocha tests --reporter mocha-junit-reporter --reporter-options mochaFile=./target/TEST-hashing.xml",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "changelog:add": "git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md'",
     "release:pre": "npm run test",
@@ -29,7 +29,8 @@
     "concat-stream": "1.4.6",
     "conventional-changelog-cli": "1.2.0",
     "gulp": "3.8.7",
-    "mocha": "3.2.0"
+    "mocha": "3.2.0",
+    "mocha-junit-reporter": "1.13.0"
   },
   "homepage": "https://github.com/holisticon/gulp-static-hash",
   "repository": {
